--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>no.studios</groupId>
   <artifactId>atelier</artifactId>
   <packaging>war</packaging>
-  <version>1.0</version>
+  <version>2.0-SNAPSHOT</version>
   <name>Atelier Fotosystem</name>
   <url>http://www.studio-s.no</url>
   <dependencies>
