--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,17 @@
   <version>2.0-SNAPSHOT</version>
   <name>Atelier Fotosystem</name>
   <url>http://www.studio-s.no</url>
+  <scm>
+    <url>
+      https://github.com/skybert/atelier
+    </url>
+    <connection>
+      scm:git:https://github.com/skybert/atelier.git
+    </connection>
+    <developerConnection>
+      scm:git:ssh://github.com/skybert/atelier.git
+    </developerConnection>
+  </scm>
   <dependencies>
     <dependency>
       <groupId>org.hibernate</groupId>
@@ -99,10 +110,6 @@
   </build>
   <reporting>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-changelog-plugin</artifactId>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
