--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -14,7 +14,7 @@ log4j.category.no.studios.atelier.manager=DEBUG
 # Appender definition.
 ######################################################################
 log4j.appender.A=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.A.File=${atelier_log_dir}/atelier.log
+log4j.appender.A.File=/var/log/studio-s/atelier.log
 # log4j.appender.A.File=/tmp/atelier.log
 log4j.appender.A.layout=org.apache.log4j.PatternLayout
 log4j.appender.A.layout.ConversionPattern=%d %5p [%t] %x (%c) %m%n
