Atelier now uses Undertow as its embedded HTTP & app server.
- It works beautifully with JAX-RS Application, something which Jetty
  doesn't do.

- removed all traces of Jetty.

- yeah!

--- a/pom.xml
+++ b/pom.xml
@@ -20,76 +20,44 @@
     </developerConnection>
   </scm>
   <properties>
-    <jetty.version>9.2.1.v20140609</jetty.version>
+    <undertow.version>1.0.1.Final</undertow.version>
+    <resteasy.version>3.0.4.Final</resteasy.version>
   </properties>
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <artifactId>jetty-plus</artifactId>
-        <groupId>org.eclipse.jetty</groupId>
-        <version>${jetty.version}</version>
-      </dependency>
-      <dependency>
-        <artifactId>jetty-webapp</artifactId>
-        <groupId>org.eclipse.jetty</groupId>
-        <version>${jetty.version}</version>
-      </dependency>
-      <dependency>
-        <artifactId>jetty-security</artifactId>
-        <groupId>org.eclipse.jetty</groupId>
-        <version>${jetty.version}</version>
-      </dependency>
-      <dependency>
-        <artifactId>jetty-annotations</artifactId>
-        <groupId>org.eclipse.jetty</groupId>
-        <version>${jetty.version}</version>
-      </dependency>
-      <dependency>
-        <artifactId>jetty-jndi</artifactId>
-        <groupId>org.eclipse.jetty</groupId>
-        <version>${jetty.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-io</groupId>
-        <artifactId>commons-io</artifactId>
-        <version>2.4</version>
-      </dependency>
-      <dependency>
-        <artifactId>jetty-server</artifactId>
-        <groupId>org.eclipse.jetty</groupId>
-        <version>${jetty.version}</version>
-      </dependency>
-      <dependency>
-        <artifactId>jetty-util</artifactId>
-        <groupId>org.eclipse.jetty</groupId>
-        <version>${jetty.version}</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
   <dependencies>
+    <dependency>
+      <groupId>io.undertow</groupId>
+      <artifactId>undertow-core</artifactId>
+      <version>${undertow.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.undertow</groupId>
+      <artifactId>undertow-servlet</artifactId>
+      <version>${undertow.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-undertow</artifactId>
+      <version>${resteasy.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-entitymanager</artifactId>
       <version>4.3.5.Final</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.hibernate.javax.persistence</groupId>
       <artifactId>hibernate-jpa-2.1-api</artifactId>
       <version>1.0.0.Final</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.hibernate.javax.persistence</groupId>
       <artifactId>hibernate-jpa-2.0-api</artifactId>
       <version>1.0.1.Final</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
       <version>1.1.0.Final</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
@@ -101,41 +69,6 @@
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
       <version>7.0</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <artifactId>jetty-plus</artifactId>
-      <groupId>org.eclipse.jetty</groupId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <artifactId>jetty-webapp</artifactId>
-      <groupId>org.eclipse.jetty</groupId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <artifactId>jetty-security</artifactId>
-      <groupId>org.eclipse.jetty</groupId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <artifactId>jetty-annotations</artifactId>
-      <groupId>org.eclipse.jetty</groupId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <artifactId>jetty-jndi</artifactId>
-      <groupId>org.eclipse.jetty</groupId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <artifactId>jetty-server</artifactId>
-      <groupId>org.eclipse.jetty</groupId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <artifactId>jetty-util</artifactId>
-      <groupId>org.eclipse.jetty</groupId>
       <scope>provided</scope>
     </dependency>
     <!-- test -->
@@ -168,7 +101,7 @@
           </descriptorRefs>
           <archive>
             <manifest>
-              <mainClass>no.studios.atelier.Atelier</mainClass>
+              <mainClass>no.studios.atelier.Main</mainClass>
             </manifest>
           </archive>
         </configuration>
@@ -226,14 +159,6 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-maven-plugin</artifactId>
-        <version>${jetty.version}</version>
-        <configuration>
-          <jettyXml>${project.basedir}/src/main/resources/jetty-config.xml</jettyXml>
-        </configuration>
       </plugin>
     </plugins>
   </build>
