--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-src/main/python/atelier-conf.json
-*.swp
 *.pyc
-src/main/python/pyenv
+*.swp
 .gitignore
+src/main/python/atelier-conf.json
+src/main/python/atelier.log
+src/main/python/pyenv
